[gd_scene load_steps=2 format=3 uid="uid://bj5x8qv0yj5h0"]

[ext_resource type="Script" uid="uid://jwe68b3x526j" path="res://source/client/ui/minigame/horse_racing_ui.gd" id="1_horse_racing"]

[node name="HorseRacingUI" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_horse_racing")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üêé Horse Racing"
horizontal_alignment = 1

[node name="BettingPhase" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="TopInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/BettingPhase/TopInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Time Left: 01:00"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/BettingPhase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HorseSelection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
offset_top = 40.0
offset_right = -250.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BettingPhase/HorseSelection"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Select Your Horse:"

[node name="HorseButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase/HorseSelection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="PlayersList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = 40.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BettingPhase/PlayersList"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Players:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/BettingPhase/PlayersList"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase/PlayersList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BettingControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BettingPhase"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="BetLabel" type="Label" parent="MarginContainer/VBoxContainer/BettingPhase/BettingControls"]
layout_mode = 2
text = "Bet Amount:"
vertical_alignment = 1

[node name="BetAmountInput" type="LineEdit" parent="MarginContainer/VBoxContainer/BettingPhase/BettingControls"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Enter gold amount"

[node name="ReadyButton" type="Button" parent="MarginContainer/VBoxContainer/BettingPhase/BettingControls"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
disabled = true
text = "Ready"

[node name="LeaveButton" type="Button" parent="MarginContainer/VBoxContainer/BettingPhase/BettingControls"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Leave"

[node name="RacingPhase" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="RaceTimerLabel" type="Label" parent="MarginContainer/VBoxContainer/RacingPhase"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Time: 30.0s"
horizontal_alignment = 1

[node name="RaceContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RacingPhase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ResultsPhase" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="WinnerLabel" type="Label" parent="MarginContainer/VBoxContainer/ResultsPhase"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "üèÜ Winner: Thunder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinningsLabel" type="Label" parent="MarginContainer/VBoxContainer/ResultsPhase"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 60.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "üéâ You won 500 gold!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/ResultsPhase"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"
